--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,23 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.programmingknowledge.votingapp">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.programmingknowledge">
+
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ChangePasswordAct"></activity>
-        <activity android:name=".ProfileAct" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+
+        <activity android:name="com.example.programmingknowledge.VotingRate"/>
+
+        <activity android:name="com.example.programmingknowledge.ChangePasswordAct" />
+
+        <activity android:name="com.example.programmingknowledge.ProfileAct" />
+
+        <activity android:name="com.example.programmingknowledge.MainActivity">
+
+
+             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+             </intent-filter>
+
         </activity>
+
+        <receiver android:name=".SMSReceiver">
+
+            <intent-filter >
+                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
