--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,9 +4,9 @@
     package="com.example.programmingknowledge">
 
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,28 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
-        <activity android:name="com.example.programmingknowledge.VotingRate"/>
-
-        <activity android:name="com.example.programmingknowledge.ChangePasswordAct" />
-
-        <activity android:name="com.example.programmingknowledge.ProfileAct" />
-
-        <activity android:name="com.example.programmingknowledge.MainActivity">
-
-
-             <intent-filter>
+        <activity android:name=".ResultAct"></activity>
+        <activity android:name=".VotingRate" />
+        <activity android:name=".ChangePasswordAct" />
+        <activity android:name=".ProfileAct" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
-
+            </intent-filter>
         </activity>
 
         <receiver android:name=".SMSReceiver">
-
-            <intent-filter >
-                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
     </application>
