--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.programmingknowledge">
+    package="com.example.neegoods">
 
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
 
     <application
+
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ResultAct"/>
+        tools:ignore="GoogleAppIndexingWarning"
+        android:label="@string/app_name">
+
+
+        <activity android:name=".ResultAct" />
         <activity android:name=".VotingRate" />
         <activity android:name=".ChangePasswordAct" />
         <activity android:name=".ProfileAct" />
+        <activity android:name=".EnvoieSms" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,13 +31,17 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".SMSReceiver"
+        <receiver
+            android:name=".SMSReceiver"
+
             android:permission="android.permission.BROADCAST_SMS">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
+
 
