--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.neegoods">
+    package="com.example.programmingknowledge">
+    
 
 
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
@@ -11,8 +13,13 @@
     <application
 
         android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ResultAct"/>
         tools:ignore="GoogleAppIndexingWarning"
         android:label="@string/app_name">
 
@@ -26,11 +33,11 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+@@ -26,13 +31,17 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".SMSReceiver"
         <receiver
             android:name=".SMSReceiver"
 
@@ -43,5 +50,4 @@
     </application>
 
 </manifest>
-
 
